realigned banner width to match content width- temp fix. Changed banner dropshadow color to match content dropshadow.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   background-color: #d1bbc8;
   font-family: monospace;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   /* flex-shrink: 1 */
@@ -21,15 +22,15 @@ body {
 
 #banner {
   width: 900px;
-  margin-bottom: 15px;
+  padding: 0px 38px 15px 38px;
+  margin: 15px;
   background: linear-gradient(#ccc 5%, transparent 1%),
     linear-gradient(90deg, #ddd 5%, transparent 1%)1px 0, #f0faee;
   background-size: 22px 22px;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-shrink: 1;
-  filter: drop-shadow(7px 7px 3px #bbb);
+  filter: drop-shadow(7px 7px 3px #b69ea8);
 }
 
 h1 {
@@ -40,6 +41,7 @@ h1 {
   display:flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 1;
 }
 
 .info {
